--- a/festa junina/src/styles/index.css
+++ b/festa junina/src/styles/index.css
@@ -23,7 +23,7 @@ header {
 
 .img-logo{
     width: 60px;
-    margin-left: 300px;
+    margin-left: 400px;
     margin-top: -200px;
 }
 
@@ -48,7 +48,7 @@ header {
     width: 360px;
     height: 50px;
     justify-content: center;
-    margin-left: 13px;
+    margin-left: 60px;
 }
 
 .junina-timer span {
@@ -62,6 +62,7 @@ header {
     width: 100vw;
     height: 350px;
     margin-top: 90px;
+    margin-left: -30px;
 }
 
 .card-img img{
@@ -78,7 +79,7 @@ header {
     overflow: hidden;
     text-align: center;
     padding: 20px;
-    margin-left: 35px;
+    margin-left: 90px;
 }
 
 .carrossel img {
@@ -130,6 +131,7 @@ header {
     align-items: center;
     text-align: center;
     padding-bottom: 50px;
+    margin-left: -35px;
 }
 
 .title-card h1{
@@ -144,7 +146,7 @@ header {
 }
 
 footer{
-    width: 100%vw;
+    width: 478px;
     height: 100px;
     background-color: #fff3cd;
     display: flex;
@@ -244,7 +246,7 @@ footer{
 }
 
 .card-vazio{
-    width: 100vw;
+    width: 478px;
     height: 210px;
     background-color: #c800c8;
     margin-top: -10px;
@@ -253,6 +255,7 @@ footer{
 .card-vazio h2{
     text-align: center;
     padding-top: 30px;
+    margin-left: 20px;
     color: #fff;
 }
 
@@ -260,28 +263,29 @@ footer{
     text-align: center;
     padding-top: 10px;
     color: #fff;
+    margin-left: 7px;
 }
 
 .card-vazio a{
-    margin-left: 130px;
+    margin-left: 180px;
     color: #fff;
-    margin-top: 100px;
+    margin-top: 150px;
 }
 
 .clone-img{
-    width: 100vw;
+    width: 478px;
     height: 270px;
     margin-top: -30px;
 }
 
 .img-vazio{
-    width: 100vw;
+    width: 478px;
     height: 270px;
     margin-top: 150px;
 }
 
 .clone-img{
-    width: 100vw;
+    width: 478px;
     height: 270px;
 }
 
