--- a/festa junina/src/styles/index.css
+++ b/festa junina/src/styles/index.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Chewy', cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -62,7 +62,7 @@ header {
     width: 100vw;
     height: 350px;
     margin-top: 90px;
-    margin-left: -30px;
+    margin-left: 30px;
 }
 
 .card-img img{
@@ -79,7 +79,7 @@ header {
     overflow: hidden;
     text-align: center;
     padding: 20px;
-    margin-left: 90px;
+    margin-left: 70px;
 }
 
 .carrossel img {
@@ -156,6 +156,10 @@ footer{
     gap: 10px;
     margin-top: 100px;
     position: relative;
+}
+
+footer p{
+    margin-left: 30px;
 }
 
 #card-02{
